fix: account font size is too big in filtering popup

--- a/src/app/components/edit-transaction/edit-transaction.component.css
+++ b/src/app/components/edit-transaction/edit-transaction.component.css
@@ -47,3 +47,7 @@ mat-card-actions {
 #amount {
     text-align: right;
 }
+
+.mat-option {
+  font-size: 14px;
+}
